# map-plugin

./: Map-Plugin.cabal
examples/src/Plugin/: Example.hs
plugin/src/: MapPlugin.hs
plugin/src/Data/Type/: Map.hs
